...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAddperson"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="62dp"
                    android:layout_height="72dp"
                    android:ellipsize="middle"
                    android:text="+"
                    android:textSize="34sp"
...
                    app:layout_constraintHorizontal_bias="0.93"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtListPerson"
                    app:layout_constraintVertical_bias="0.90999997" />

                <EditText
                    android:id="@+id/editMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Email"
                    app:layout_constraintBottom_toTopOf="@+id/txtListPerson"
...
