<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/reunion_filtre_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filtre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Renseigner le lieu a filtrer"
                android:text="Filtrer par date et lieu"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_sujet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Renseigner le sujet a filtrer"
                android:hint="Filtrer par sujet"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_lieu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Renseigner Le lieu a filtrer"
                android:hint="Filtrer par lieu"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_start_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Renseigner la date de début a filtrer"
                android:hint="Filtrer par date de début"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Renseigner la date de fin a filtrer"
                android:hint="Filtrer par date de fin"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Bouton de filtrage"
                android:text="Appliquer"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Bouton de reinitialisation des reunions"
                android:text="Reset des Filtres"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_open_filtre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Bouton d'ouverture de filtre"
                android:visibility="visible"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <ImageButton
                android:id="@+id/button_close_filtre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="bouton de fermeture de filtre"
                android:visibility="gone"
                app:srcCompat="@android:drawable/arrow_up_float" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reunion_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="Liste des reunion"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reunion_filtre_cardview" />

    <TextView
        android:id="@+id/texttotalReunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nb Total Reunions:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNbTotalReus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/texttotalReunion" />
</androidx.constraintlayout.widget.ConstraintLayout>